Set up FE and BE for image upload

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^1.0.8",
     "ai": "^4.0.18",
     "next": "15.0.4",
+    "openai": "^4.76.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
