--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@ai-sdk/openai": "^1.0.8",
     "ai": "^4.0.18",
     "dotenv": "^16.4.7",
-    "next": "15.0.4",
+    "next": "^15.1.1",
     "openai": "^4.76.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
